# vgw

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  vcpkg.json
examples/: CMakeLists.txt
examples/compute/: CMakeLists.txt  compute.comp  main.cpp
examples/hello_triangle/: CMakeLists.txt  main.cpp  triangle.frag  triangle.vert
examples/scene_render/: CMakeLists.txt  geometry.frag  geometry.vert  main.cpp
include/: vgw.hpp
include/vgw/: base.hpp  buffer.hpp  command_buffer.hpp  common.hpp  context.hpp  device.hpp  handles.hpp  image.hpp  pipelines.hpp  render_pass.hpp  resource_storage.hpp  structs.hpp  swap_chain.hpp  utility.hpp  vgw.hpp
include_old/: base.hpp  buffer.hpp  context.hpp  device.hpp  image.hpp  pipelines.hpp  resource_storage.hpp  structs.hpp  swap_chain.hpp  synchronization.hpp  utility.hpp  vgw.hpp
src/: CMakeLists.txt  buffer.cpp  command_buffer.cpp  context.cpp  context_helpers.cpp  context_helpers.hpp  device.cpp  device_helpers.cpp  device_helpers.hpp  image.cpp  pipelines.cpp  render_pass.cpp  swap_chain.cpp  synchronization.cpp  utility.cpp  vgw.cpp
src/internal/: internal_buffers.cpp  internal_buffers.hpp  internal_command_buffers.cpp  internal_command_buffers.hpp  internal_context.cpp  internal_context.hpp  internal_core.cpp  internal_core.hpp  internal_device.cpp  internal_device.hpp  internal_images.cpp  internal_images.hpp  internal_layouts.cpp  internal_layouts.hpp  internal_pipelines.cpp  internal_pipelines.hpp  internal_render_pass.cpp  internal_render_pass.hpp  internal_sets.cpp  internal_sets.hpp  internal_surface.cpp  internal_surface.hpp  internal_swapchain.cpp  internal_swapchain.hpp  internal_synchronisation.cpp  internal_synchronisation.hpp
src_old/: command_buffer.cpp  context.cpp  device.cpp  internal_device.hpp  internal_swap_chain.cpp  internal_swap_chain.hpp  pipelines.cpp  render_pass.cpp  synchronization.cpp  utility.cpp
